# stanford_cars_refined

./: README.md  pyproject.toml
data/: refined_train.csv
src/: dataset.py  inference.py  model.py  train.py  utils.py
